--- a/web.config
+++ b/web.config
@@ -4,13 +4,9 @@
         <httpRedirect enabled="false" destination="login.html" exactDestination="true" childOnly="false" />
         <rewrite>
             <rules>
-                <rule name="index" enabled="true" stopProcessing="true">
+                <rule name="index" enabled="false" stopProcessing="true">
                     <match url="^$" />
                     <action type="Redirect" url="login.html" />
-                </rule>
-                <rule name="html_clear" enabled="false" stopProcessing="true">
-                    <match url="^(.*)$" />
-                    <action type="Rewrite" url="{R:1}.html" />
                 </rule>
             </rules>
         </rewrite>
