--- a/web.config
+++ b/web.config
@@ -1,14 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
     <system.webServer>
-        <httpRedirect enabled="false" destination="login.html" exactDestination="true" childOnly="false" />
-        <rewrite>
-            <rules>
-                <rule name="index" enabled="false" stopProcessing="true">
-                    <match url="^$" />
-                    <action type="Redirect" url="login.html" />
-                </rule>
-            </rules>
-        </rewrite>
+        <httpRedirect enabled="false" destination="http://www.kutech.tw" exactDestination="true" childOnly="true" httpResponseStatus="Found" />
     </system.webServer>
 </configuration>
