--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "editor.maxTokenizationLineLength": 20000000000
+    "editor.maxTokenizationLineLength": 20000000000,
+    "liveServer.settings.port": 5501
 }
