Co-authored-by: LeonLu <LeonLu3303@users.noreply.github.com>

--- a/web.config
+++ b/web.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
     <system.webServer>
-        <httpRedirect enabled="false" destination="http://www.kutech.tw" exactDestination="true" childOnly="true" httpResponseStatus="Found" />
+        <httpRedirect enabled="false" destination="http://lan.kutech.tw" exactDestination="true" childOnly="true" httpResponseStatus="Found" />
     </system.webServer>
 </configuration>
